Devops/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  namespace: mta
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongo-dev
  template:
    metadata:
      labels:
        app: mongo-dev
    spec:
      containers:
      - image: mongo
        name: mongo-container
        ports:
          - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: mta
spec:
  selector:
    app: mongo-dev
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
