Devops/webapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-api
  namespace: mta
spec:
  selector:
    app: web-api
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: mta
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - image: mongo
          name: mongo-container
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: mta
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: redis
  namespace: mta
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis
        name: redis-container
        ports:
          - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: mta
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rediscommander
  namespace: mta
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rediscommander
  template:
    metadata:
      labels:
        app: rediscommander
    spec:
      containers:
      - image: rediscommander/redis-commander
        name: rediscommander-container
        ports:
          - containerPort: 8081
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: rediscommander
  namespace: mta
spec:
  selector:
    app: rediscommander
  ports:
  - port: 8081
    targetPort: 8081
