Devops/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: mta
spec:
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: hienvannguyen0408/web-app
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: mta
spec:
  selector:
    app: web-app
  ports:
  - port: 80
    targetPort: 8080
