Devops/webingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-backend
  namespace: mta
spec:
  ingressClassName: ingress-resource-backend
  rules:
  - http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: web-api-service
            port:
              number: 80
